# Aegis

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  go.mod  go.sum  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
cmd/aegis/: main.go
cmd/mock-agent/: main.go
configs/: aegis.yaml
deployments/docker/: Dockerfile
docs/: ROADMAP.md
docs/analysis/: classifier-v1-results.md  evaluation-results.md  research-plan.md
docs/architecture/: system-architecture.md
docs/capstone/: methodology-and-plan.md
docs/design/: threat-model.md
docs/guides/: coding-standards.md  getting-started.md
docs/references/: papers.md
internal/audit/: audit.go
internal/auditor/: auditor.go  auditor_test.go  provider.go
internal/classifier/: classifier.go  tokenizer.go  tokenizer_test.go
internal/config/: config.go  config_test.go
internal/metrics/: metrics.go
internal/proxy/: proxy.go  proxy_test.go
internal/sanitizer/: exfiltration.go  sanitizer.go  sanitizer_test.go
ml/: requirements.txt
ml/eval/: ablation_test.go  auditor_eval_test.go  evaluate.py  latency_bench_test.go  phi_leak_eval_test.go
ml/models/: training_metrics.json
ml/notebooks/: aegis_data_catalog.ipynb  aegis_eda_training.ipynb  eda_data_cleaning.ipynb
ml/training/: train_classifier.py
pkg/phi/: patterns.go  patterns_test.go
pkg/types/: types.go
scripts/: test_live.sh
scripts/data/: download_all.sh  download_mimic.sh  preprocess.py
test/fixtures/: adversarial_corpus.jsonl  (+2 more)
web/: demo.html
